unpackaged/main/default/objects/StoreMaster__c/StoreMaster__c.object-meta.xml
<CustomObject>
    <label>Store Master</label>
    <nameField>
        <displayFormat>SM-{0}</displayFormat>
        <label>Store Master Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Store Master</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>