unpackaged/main/default/objects/StoreMaster__c/fields/Area_Manager__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager__c</fullName>
    <label>Area Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>