unpackaged/main/default/objects/StoreMaster__c/fields/Area_Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Area_Manager_Email_Address__c</fullName>
    <label>Area Manager Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>