unpackaged/main/default/objects/StoreMaster__c/fields/Chain_Name__c.field-meta.xml
<CustomField>
    <fullName>Chain_Name__c</fullName>
    <label>Chain Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>