unpackaged/main/default/objects/StoreMaster__c/fields/ChainId__c.field-meta.xml
<CustomField>
    <fullName>ChainId__c</fullName>
    <label>ChainId</label>
    <length>2</length>
    <type>Text</type>
</CustomField>