unpackaged/main/default/objects/StoreMaster__c/fields/Concatenated_Store_Name__c.field-meta.xml
<CustomField>
    <fullName>Concatenated_Store_Name__c</fullName>
    <description>Used for Store Search on Case page by Mall Name, Store #, State</description>
    <label>Concatenated Store Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>