unpackaged/main/default/objects/StoreMaster__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District #</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>