unpackaged/main/default/objects/StoreMaster__c/fields/District_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>District_Sales_Manager__c</fullName>
    <label>District Sales Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>