unpackaged/main/default/objects/StoreMaster__c/fields/District_Sales_Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>District_Sales_Manager_Email_Address__c</fullName>
    <label>District Sales Manager Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>