unpackaged/main/default/objects/StoreMaster__c/fields/Internal_Store_Number__c.field-meta.xml
<CustomField>
    <fullName>Internal_Store_Number__c</fullName>
    <description>This field will be used for Data Load purpose to resolve duplicates</description>
    <label>Internal Store Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>