unpackaged/main/default/objects/StoreMaster__c/fields/Mall_Name__c.field-meta.xml
<CustomField>
    <fullName>Mall_Name__c</fullName>
    <label>Mall Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>