unpackaged/main/default/objects/StoreMaster__c/fields/Old_StoreUniqueId__c.field-meta.xml
<CustomField>
    <fullName>Old_StoreUniqueId__c</fullName>
    <label>Old StoreUniqueId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>