unpackaged/main/default/objects/StoreMaster__c/fields/Region_Name__c.field-meta.xml
<CustomField>
    <fullName>Region_Name__c</fullName>
    <label>Region Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NORTH</fullName>
            </value>
            <value>
                <fullName>SOUTH</fullName>
            </value>
            <value>
                <fullName>EAST</fullName>
            </value>
            <value>
                <fullName>WEST</fullName>
            </value>
            <value>
                <fullName>MIDWEST</fullName>
            </value>
            <value>
                <fullName>CANADA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>