unpackaged/main/default/objects/StoreMaster__c/fields/Region_Number__c.field-meta.xml
<CustomField>
    <fullName>Region_Number__c</fullName>
    <label>Region Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>