unpackaged/main/default/objects/StoreMaster__c/fields/Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director__c</fullName>
    <label>Regional Director</label>
    <length>255</length>
    <type>Text</type>
</CustomField>