unpackaged/main/default/objects/StoreMaster__c/fields/Regional_Director_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Regional_Director_Email_Address__c</fullName>
    <label>Regional Director Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>