unpackaged/main/default/objects/StoreMaster__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Y or N</description>
    <label>Active</label>
    <length>1</length>
    <type>Text</type>
</CustomField>