unpackaged/main/default/objects/StoreMaster__c/fields/Store_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Store_Email_Address__c</fullName>
    <label>Store Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>