unpackaged/main/default/objects/StoreMaster__c/fields/Store_Manager__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager__c</fullName>
    <label>Store Manager</label>
    <length>255</length>
    <type>Text</type>
</CustomField>