unpackaged/main/default/objects/StoreMaster__c/fields/Store_Manager_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Store_Manager_Email_Address__c</fullName>
    <label>Store Manager Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>