unpackaged/main/default/objects/StoreMaster__c/fields/StoreAddressLine1__c.field-meta.xml
<CustomField>
    <fullName>StoreAddressLine1__c</fullName>
    <label>AddressLine1</label>
    <type>TextArea</type>
</CustomField>