unpackaged/main/default/objects/StoreMaster__c/fields/StoreAddressLine2__c.field-meta.xml
<CustomField>
    <fullName>StoreAddressLine2__c</fullName>
    <label>AddressLine2</label>
    <type>TextArea</type>
</CustomField>