unpackaged/main/default/objects/StoreMaster__c/fields/StoreFileSource__c.field-meta.xml
<CustomField>
    <fullName>StoreFileSource__c</fullName>
    <label>FileSource</label>
    <length>10</length>
    <type>Text</type>
</CustomField>