unpackaged/main/default/objects/StoreMaster__c/fields/StoreMall__c.field-meta.xml
<CustomField>
    <fullName>StoreMall__c</fullName>
    <description>Name of the Mall where the store is located.</description>
    <label>Mall</label>
    <length>255</length>
    <type>Text</type>
</CustomField>