unpackaged/main/default/objects/StoreMaster__c/fields/StoreNumber__c.field-meta.xml
<CustomField>
    <fullName>StoreNumber__c</fullName>
    <externalId>true</externalId>
    <label>Store Number</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>