unpackaged/main/default/objects/StoreMaster__c/fields/StorePhone__c.field-meta.xml
<CustomField>
    <fullName>StorePhone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>