unpackaged/main/default/objects/StoreMaster__c/fields/StoreUniqueId__c.field-meta.xml
<CustomField>
    <fullName>StoreUniqueId__c</fullName>
    <externalId>true</externalId>
    <label>StoreUniqueId</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>