unpackaged/main/default/objects/StoreMaster__c/fields/Zone_Vice_President__c.field-meta.xml
<CustomField>
    <fullName>Zone_Vice_President__c</fullName>
    <label>Zone Vice President</label>
    <length>255</length>
    <type>Text</type>
</CustomField>