unpackaged/main/default/objects/StoreMaster__c/fields/Zone_Vice_President_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Zone_Vice_President_Email_Address__c</fullName>
    <label>Zone Vice President Email Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>