unpackaged/main/default/objects/StoreMaster__c/validationRules/Prevent_CSR_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_CSR_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND($Profile.Name != &quot;Ops/Quality&quot;,
			 $Profile.Name != &quot;System Administrator&quot;,
		 	$Profile.Name != &quot;PVHIntegrationAPIUser&quot;)</errorConditionFormula>
    <errorMessage>You do not have permission to modify this field. Please contact your supervisor for assistance.</errorMessage>
</ValidationRule>