unpackaged/main/default/objects/StoreMaster__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>StoreUniqueId__c</columns>
    <columns>Brand__c</columns>
    <columns>Country__c</columns>
    <columns>ChainId__c</columns>
    <columns>Chain_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>