unpackaged/main/default/objects/StoreMaster__c/listViews/All_C.listView-meta.xml
<ListView>
    <fullName>All_C</fullName>
    <columns>NAME</columns>
    <columns>Mall_Name__c</columns>
    <columns>Brand__c</columns>
    <columns>Store_Name__c</columns>
    <columns>StoreNumber__c</columns>
    <columns>District__c</columns>
    <columns>District_Name__c</columns>
    <columns>Store_Email_Address__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>